--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/styles/general.css">
   <link rel="stylesheet" href="src/styles/main_page/main_header.css">
+  <link rel="stylesheet" href="src/styles/main_page/main_sidebar.css">
   <title>Document</title>
 </head>
 <body>
@@ -24,7 +25,6 @@
         <img src="src/images/logos/search_logo.png" alt="search">
       </div>
     </div>
-    
     <div class="header-icons-block">
       <div class="button-icons">
         <svg width="27" height="20" viewBox="0 0 27 20">
@@ -40,6 +40,150 @@
       <img src="src/images/icons/user_icon.png" class="user-icon" alt="">
     </div>
   </header>
+  <main>
+    <div class="sidebar">
+      <ul class="sidebar-menu">
+        <li class="menu-item main-item first">
+          <svg width="20" height="19" class="sidebar-icons">
+            <image xlink:href="src/images/icons/sidebar_icons/home.svg">
+          </svg>
+          <span style="color:red">
+            Home
+          </span>
+        </li>
+        <li class="menu-item main-item">
+          <svg width="16" height="21"  class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/trending.svg" alt=""/>
+          </svg>
+          <span>
+            Trending
+          </span>
+        </li>
+        <li class="menu-item main-item last">
+          <svg width="18" height="18" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/subscription.svg" alt=""/>
+          </svg>
+          <span>
+            Subscriptions
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="20" height="16" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/library.svg" alt=""/>
+          </svg>
+          <span>
+            Library
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="20" height="18" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/history.svg" alt=""/>
+          </svg>
+          <span>
+            History
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="17" height="19" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/watch_later.svg" alt=""/>
+          </svg>
+          <span>
+            Watch later
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="19" height="18" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/favourites.svg" alt=""/>
+          </svg>
+          <span>
+            Favourites
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="18" height="17" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/liked_videos.svg" alt=""/>
+          </svg>
+          <span>
+            Liked videos
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="18" height="20" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/music.svg" alt=""/>
+          </svg>
+          <span>
+            Music
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg  width="22" height="16" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/games.svg" alt=""/>
+          </svg>
+          <span>
+            Games
+          </span>
+        </li>
+        <li class="menu-item">
+          <svg width="14" height="8" class="sidebar-icons">
+            <image href="src/images/icons/sidebar_icons/show_more.svg" alt=""/>
+          </svg>
+          <span>
+            Show more
+          </span>
+        </li>   
+      </ul>
+      <ul class="sidebar-subscriptions">
+        <h3>
+          Subscriptions
+        </h3>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/gussie.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Gussie Singleton
+          </span>
+        </li>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/nora.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Nora Francis
+          </span>
+        </li>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/belle.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Belle Briggs
+          </span>
+        </li>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/eunice.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Eunice Cortez
+          </span>
+        </li>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/emma.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Emma Hanson
+          </span>
+        </li>
+        <li class="subscriptions-item">
+          <img src="src/images/users_images/leah.png" alt="" class="subscription-image">
+          <span class="subscription-heading">
+            Leah Berry
+          </span>
+        </li>
+      </ul>
+      <div class="settings">
+        <svg width="19" height="20" class="sidebar-icons">
+          <image href="src/images/icons/sidebar_icons/settings.svg" alt=""/>
+        </svg>
+        <span>
+          Setting
+        </span>
+      </div>
+    </div>
+
+  </main>
   
 </body>
 </html>
