--- a/channel_page.html
+++ b/channel_page.html
@@ -55,25 +55,32 @@
           <svg width="20" height="19" class="sidebar-icons">
             <image xlink:href="src/images/icons/sidebar_icons/home.svg">
           </svg>
-          <span style="color:red">
-            Home
-          </span>
+          <a href="index.html">
+            <span style="color:red">
+              Home
+            </span>
+          </a>
         </li>
         <li class="menu-item main-item">
-          <svg width="16" height="21"  class="sidebar-icons">
-            <image href="src/images/icons/sidebar_icons/trending.svg" alt=""/>
-          </svg>
-          <span>
-            Trending
-          </span>
+            <svg width="16" height="21"  class="sidebar-icons">
+              <image href="src/images/icons/sidebar_icons/trending.svg" alt=""/>
+            </svg>
+          <a href="channel_page.html">
+
+            <span>
+              Trending
+            </span>
+          </a> 
         </li>
         <li class="menu-item main-item last">
-          <svg width="18" height="18" class="sidebar-icons">
-            <image href="src/images/icons/sidebar_icons/subscription.svg" alt=""/>
-          </svg>
-          <span>
-            Subscriptions
-          </span>
+            <svg width="18" height="18" class="sidebar-icons">
+              <image href="src/images/icons/sidebar_icons/subscription.svg" alt=""/>
+            </svg>
+          <a href="video_page.html">
+            <span>
+              Subscriptions
+            </span>
+          </a>
         </li>
         <li class="menu-item">
           <svg width="20" height="16" class="sidebar-icons">
