--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/styles/general.css">
   <link rel="stylesheet" href="src/styles/main_page/main_header.css">
+
   <link rel="stylesheet" href="src/styles/main_page/main_sidebar.css">
+  <link rel="stylesheet" href="src/styles/main_page/main_content.css">
+  <link rel="stylesheet" href="src/styles/main_page/main_mobile.css">
+
   <title>Document</title>
 </head>
 <body>
@@ -47,25 +51,32 @@
           <svg width="20" height="19" class="sidebar-icons">
             <image xlink:href="src/images/icons/sidebar_icons/home.svg">
           </svg>
-          <span style="color:red">
-            Home
-          </span>
+          <a href="index.html">
+            <span style="color:red">
+              Home
+            </span>
+          </a>
         </li>
         <li class="menu-item main-item">
-          <svg width="16" height="21"  class="sidebar-icons">
-            <image href="src/images/icons/sidebar_icons/trending.svg" alt=""/>
-          </svg>
-          <span>
-            Trending
-          </span>
+            <svg width="16" height="21"  class="sidebar-icons">
+              <image href="src/images/icons/sidebar_icons/trending.svg" alt=""/>
+            </svg>
+          <a href="channel_page.html">
+
+            <span>
+              Trending
+            </span>
+          </a> 
         </li>
         <li class="menu-item main-item last">
-          <svg width="18" height="18" class="sidebar-icons">
-            <image href="src/images/icons/sidebar_icons/subscription.svg" alt=""/>
-          </svg>
-          <span>
-            Subscriptions
-          </span>
+            <svg width="18" height="18" class="sidebar-icons">
+              <image href="src/images/icons/sidebar_icons/subscription.svg" alt=""/>
+            </svg>
+          <a href="video_page.html">
+            <span>
+              Subscriptions
+            </span>
+          </a>
         </li>
         <li class="menu-item">
           <svg width="20" height="16" class="sidebar-icons">
